# SpotlightServer

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
app/: controller.py  main.py  router.py
app/llm_clients/: __init__.py  anthropic.py  gemini.py  openai.py
app/models/: request.py  response.py
app/tools/: search.py  summariser.py
app/utils/: classifier.py
